smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace-before-shapes.smithy
// A namespace must be set before shapes or traits can be defined
string MyString
